--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -19,7 +19,7 @@
   /* font size */
 
   --big-font-size:2rem;
-  --h1-font-sixe:1.5rem;
+  --h1-font-size:1.5rem;
   --h2-font-size:1.25rem;
   --h3-font-size:1.125rem;
   --normal-font-size:.938rem;
@@ -33,4 +33,51 @@
 
   /* Margnes Bottom */
  
+  --mb-0-25:.25rem;
+  --mb-0-5:.5rem;
+  --mb-0-75:.75rem;
+  --mb-1:1rem;
+  --mb-1-5:1.5rem;
+  --mb-2:2rem;
+  --mb-2-5:2.5rem;
+  --mb-3:3rem;
+
+  /* z index */
+  --z-tooltip:10;
+  --z-fixed:100;
+  --z-modal:100;
+}
+
+
+@media screen and (min-width: 968px){
+  :root{
+    --big-font-size:3rem;
+    --h1-font-size:2.25rem;
+    --h2-font-size:1.5rem;
+    --h3-font-size:1.25rem;
+    --normal-font-size:1rem;
+    --small-font-size:.875rem;
+    --smaller-font-size:.813rem;
+  
+  }
+}
+
+/* Base de structuration */
+
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
+body{
+  margin: 0 0 var(--header-heigth) 0;
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  background-color: var(--body-color);
 }
