--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -162,7 +162,7 @@ img{
 }
 
 .nav__logo:hover{
-  color: var(--frist-color);
+  color: var(--frist-color)  ;
 }
 
 .nav__toggle{
@@ -170,6 +170,22 @@ img{
   cursor: pointer;
 }
 
-.nav_toggle:hover{
+.nav__toggle:hover{
   color: var(--frist-color);
+}
+
+@media screen and (max-width: 767px){
+   .nav__menu{
+       position: fixed;
+       bottom: 0;
+       left: 0;
+       width: 100%;
+       background-color: var(--body-color);
+       padding: 2rem 1.5rem 4rem;
+       box-shadow: 0 -1px 4px rgba(0,0,0,.15);
+       border-radius: 1.5rem 1.5rem 0 0;
+       transition: .3s;
+
+   }
+
 }
