--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -177,7 +177,7 @@ img{
 @media screen and (max-width: 767px){
    .nav__menu{
        position: fixed;
-       bottom: 0;
+       bottom: -100%;
        left: 0;
        width: 100%;
        background-color: var(--body-color);
@@ -204,6 +204,19 @@ img{
 }
 
 .nav__link:hover{
+  color: var(--frist-color);
+}
+
+.nav__icon{
+    width: 1.2rem;
+}
+
+.nav__close{
+  position: absolute;
+  right: 1.3rem;
+  bottom: .5rem;
+  font-size: 1.5rem ;
+  cursor: pointer;
   color: var(--frist-color);
 }
 /* show menu  */
