--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -329,3 +329,33 @@ home__social-icon{
   align-items: center;
 
 }
+
+/* partie about  */
+
+
+
+.about__img{
+  width: 200px;
+  border-radius: .5rem;
+   margin: auto;
+   
+}
+
+.about__description{
+  text-align: center;
+  margin-bottom: var(--mb-2-5);
+}
+
+.about__info{
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: var(--mb-2-5);
+}
+
+about__info-title{
+ font-size: var(--h2-font-size);
+ font-weight: var(--font-semi-bold);
+}
+.about__info-name{
+  font-size: var(--smaller-font-size);
+}
