--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -477,3 +477,17 @@ img{
 .skills__photoshop{
   width: 70%;
 }
+
+.skills__close .skills__list{
+  height: 0;
+  overflow: hidden;
+}
+
+.skills__open .skills__list{
+  height: max-content;
+  margin-bottom: var(--mb-2-5);
+}
+
+.skills__open .skills__arrow{
+  transform: rotate(-180deg);
+}
