--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -551,11 +551,11 @@ img{
   transform: translate(6px, -7px);
  }
 
- .qualification [data-content]{
+/*  .qualification [data-content]{
   display: none;
  }
 
  .qualification__active [data-content]{ 
   display: block;
   
- }
+ } */
