--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -554,8 +554,22 @@ img{
 /*  .qualification [data-content]{
   display: none;
  }
-
+bug mbola mila fixeko
  .qualification__active [data-content]{ 
   display: block;
   
  } */
+
+ /* ===Services=== */
+ .services__container{
+  gap: 1.5rem;
+  grid-template-columns: repeat(2,1fr);
+ }
+ .services__content{
+  position: relative;
+  background-color: var(--container-color);
+  padding: 3.5rem .5rem 1.25rem 1.5rem;
+  border-radius: .25rem;
+  box-shadow: 0 2px 4px rgba(0,0,0,.15);
+  transition: .3s;
+ }
