--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -615,3 +615,18 @@ bug mbola mila fixeko
   cursor: pointer;
   font-size: var(--small-font-size);
  }
+
+ .services__button:hover .button__icon{
+  transform: translateX(.25rem);
+ }
+
+ .services__modal{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,.5);
+  display: flex;
+  align-items: center;
+ }
