--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -629,4 +629,15 @@ bug mbola mila fixeko
   background-color: rgba(0,0,0,.5);
   display: flex;
   align-items: center;
+  justify-content: center;
+  padding: 0 1rem;
+  z-index: var(--z-modal);
+  /* opacity:0 */
+  /* visibility: hidden; */
+  transition: .3s;
+
+ }
+
+ .services__modal-content{
+  
  }
