--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -639,5 +639,8 @@ bug mbola mila fixeko
  }
 
  .services__modal-content{
-  
+  position: relative;
+  background-color: var(--container-color);
+  padding: 1.5rem;
+  border-radius: .5rem;
  }
