--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,81 +1,78 @@
-:root{
+:root {
   /* partie declaration variable  */
- --header-heigth:3rem;
- 
- --hue-color:230;
+  --header-heigth: 3rem;
 
-  --frist-color:hsl(var(--hue-color),69%,61%);
-  --frist-color-second:hsl(var(--hue-color),69%,61%);
-  --frist-color-alt:hsl(var(--hue-color),57%,53%);
-  --frist-color-lighter:hsl(var(--hue-color),92%,85%);
-  --title-color:hsl(var(--hue-color),8%,15%);
-  --text-color:hsl(var(--hue-color),8%,45%);
-  --text-color-light:hsl(var(--hue-color),8%,65%);
-  --input-color:hsl(var(--hue-color),70%,96%);
-  --body-color:hsl(var(--hue-color),60%,99%);
-  --container-color:#FFF;
+  --hue-color: 230;
+
+  --frist-color: hsl(var(--hue-color), 69%, 61%);
+  --frist-color-second: hsl(var(--hue-color), 69%, 61%);
+  --frist-color-alt: hsl(var(--hue-color), 57%, 53%);
+  --frist-color-lighter: hsl(var(--hue-color), 92%, 85%);
+  --title-color: hsl(var(--hue-color), 8%, 15%);
+  --text-color: hsl(var(--hue-color), 8%, 45%);
+  --text-color-light: hsl(var(--hue-color), 8%, 65%);
+  --input-color: hsl(var(--hue-color), 70%, 96%);
+  --body-color: hsl(var(--hue-color), 60%, 99%);
+  --container-color: #fff;
   /* font que je vais utiliser */
-  --body-font:'Poppins',sans-serif;
+  --body-font: "Poppins", sans-serif;
   /* font size */
 
-  --big-font-size:2rem;
-  --h1-font-size:1.5rem;
-  --h2-font-size:1.25rem;
-  --h3-font-size:1.125rem;
-  --normal-font-size:.938rem;
-  --small-font-size:.813rem;
-  --smaller-font-size:.75rem;
+  --big-font-size: 2rem;
+  --h1-font-size: 1.5rem;
+  --h2-font-size: 1.25rem;
+  --h3-font-size: 1.125rem;
+  --normal-font-size: 0.938rem;
+  --small-font-size: 0.813rem;
+  --smaller-font-size: 0.75rem;
 
   /* font weight */
 
-  --font-medium:500;
-  --font-semi-bold:600;
+  --font-medium: 500;
+  --font-semi-bold: 600;
 
   /* Margnes Bottom */
- 
-  --mb-0-25:.25rem;
-  --mb-0-5:.5rem;
-  --mb-0-75:.75rem;
-  --mb-1:1rem;
-  --mb-1-5:1.5rem;
-  --mb-2:2rem;
-  --mb-2-5:2.5rem;
-  --mb-3:3rem;
+
+  --mb-0-25: 0.25rem;
+  --mb-0-5: 0.5rem;
+  --mb-0-75: 0.75rem;
+  --mb-1: 1rem;
+  --mb-1-5: 1.5rem;
+  --mb-2: 2rem;
+  --mb-2-5: 2.5rem;
+  --mb-3: 3rem;
 
   /* z index */
-  --z-tooltip:10;
-  --z-fixed:100;
-  --z-modal:100;
+  --z-tooltip: 10;
+  --z-fixed: 100;
+  --z-modal: 100;
 }
 
-
-@media screen and (min-width: 968px){
-  :root{
-    --big-font-size:3rem;
-    --h1-font-size:2.25rem;
-    --h2-font-size:1.5rem;
-    --h3-font-size:1.25rem;
-    --normal-font-size:1rem;
-    --small-font-size:.875rem;
-    --smaller-font-size:.813rem;
-  
+@media screen and (min-width: 968px) {
+  :root {
+    --big-font-size: 3rem;
+    --h1-font-size: 2.25rem;
+    --h2-font-size: 1.5rem;
+    --h3-font-size: 1.25rem;
+    --normal-font-size: 1rem;
+    --small-font-size: 0.875rem;
+    --smaller-font-size: 0.813rem;
   }
 }
 
 /* Base de structuration */
 
-*{
+* {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
-body{
+body {
   margin: 0 0 var(--header-heigth) 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
@@ -83,60 +80,61 @@ body{
   color: var(--text-color);
 }
 
-h1,h2,h3,h4{
-  color:var(--title-color);
+h1,
+h2,
+h3,
+h4 {
+  color: var(--title-color);
   font-weight: var(--font-semi-bold);
 }
 
-
-ul{
+ul {
   list-style: none;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-img{
+img {
   max-width: 100%;
   height: auto;
 }
 
 /* ======Classe css===== */
 
-.section{
+.section {
   padding: 2rem 0 4rem;
-  
 }
 
-.section__title{
+.section__title {
   font-size: var(--h1-font-size);
 }
 
-.section__subtitle{
+.section__subtitle {
   display: block;
   font-size: var(--small-font-size);
   margin-bottom: var(--mb-3);
 }
 
 .section__title,
-.section__subtitle{
+.section__subtitle {
   text-align: center;
 }
 
 /* LE LAYOUT */
-.container{
+.container {
   max-width: 768px;
   margin-left: var(--mb-1-5);
   margin-right: var(--mb-1-5);
 }
 
-.grid{
+.grid {
   display: grid;
   gap: 1.5rem;
 }
 
-.header{
+.header {
   width: 100%;
   position: fixed;
   bottom: 0;
@@ -147,7 +145,7 @@ img{
 
 /* ----------patie du nav---------- */
 
-.nav{
+.nav {
   max-width: 968px;
   height: var(--header-heigth);
   display: flex;
@@ -156,45 +154,43 @@ img{
 }
 
 .nav__logo,
-.nav__toggle{
+.nav__toggle {
   color: var(--title-color);
   font-weight: var(--font-medium);
 }
 
-.nav__logo:hover{
-  color: var(--frist-color)  ;
+.nav__logo:hover {
+  color: var(--frist-color);
 }
 
-.nav__toggle{
+.nav__toggle {
   font-size: 1.1rem;
   cursor: pointer;
 }
 
-.nav__toggle:hover{
+.nav__toggle:hover {
   color: var(--frist-color);
 }
 
-@media screen and (max-width: 767px){
-   .nav__menu{
-       position: fixed;
-       bottom: -100%;
-       left: 0;
-       width: 100%;
-       background-color: var(--body-color);
-       padding: 2rem 1.5rem 4rem;
-       box-shadow: 0 -1px 4px rgba(0,0,0,.15);
-       border-radius: 1.5rem 1.5rem 0 0;
-       transition: .3s;
-
-   }
-
+@media screen and (max-width: 767px) {
+  .nav__menu {
+    position: fixed;
+    bottom: -100%;
+    left: 0;
+    width: 100%;
+    background-color: var(--body-color);
+    padding: 2rem 1.5rem 4rem;
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 1.5rem 1.5rem 0 0;
+    transition: 0.3s;
+  }
 }
 
-.nav__list{
-  grid-template-columns: repeat(3,1fr);
+.nav__list {
+  grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
 }
-.nav__link{
+.nav__link {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -203,205 +199,191 @@ img{
   font-weight: var(--font-medium);
 }
 
-.nav__link:hover{
+.nav__link:hover {
   color: var(--frist-color);
 }
 
-.nav__icon{
-    width: 1.2rem;
+.nav__icon {
+  width: 1.2rem;
 }
 
-.nav__close{
+.nav__close {
   position: absolute;
   right: 1.3rem;
-  bottom: .5rem;
-  font-size: 1.5rem ;
+  bottom: 0.5rem;
+  font-size: 1.5rem;
   cursor: pointer;
   color: var(--frist-color);
 }
 /* show menu  */
 
-.show-menu{
+.show-menu {
   bottom: 0;
 }
 
 /* partie du home */
-.home__container{
+.home__container {
   gap: 1rem;
 }
 
-.home__content{
-  grid-template-columns: .5fr 3fr;
+.home__content {
+  grid-template-columns: 0.5fr 3fr;
   padding-top: 3.5rem;
   align-items: center;
 }
 
-.home__social{
+.home__social {
   display: grid;
   grid-template-columns: max-content;
   row-gap: 1rem;
 }
 
-.home__social-icon{
+.home__social-icon {
   font-size: 1.25rem;
-  color:var(--frist-color); 
-  
-   
+  color: var(--frist-color);
 }
 
-.home__social-icon:hover{
-  color:var(--frist-color-alt)
+.home__social-icon:hover {
+  color: var(--frist-color-alt);
 }
 
-.home__blob{
+.home__blob {
   width: 200px;
   fill: var(--frist-color);
 }
 
-.home__blob-img{
+.home__blob-img {
   width: 170px;
-  
 }
-.home__data{
+.home__data {
   grid-column: 1/3;
 }
 
-.home__title{
+.home__title {
   font-size: var(--big-font-size);
 }
 
-.home__subtitle{
+.home__subtitle {
   font-size: var(--h3-font-size);
   color: var(--text-color);
   font-weight: var(--font-medium);
   margin-bottom: var(--mb-0-75);
 }
 
-.home__description{
-  margin-bottom: var(--mb-2); 
+.home__description {
+  margin-bottom: var(--mb-2);
 }
-.home__scroll{
+.home__scroll {
   display: none;
 }
 
-.home__scroll-button{
+.home__scroll-button {
   color: var(--frist-color);
-  transition: .3s;
+  transition: 0.3s;
 }
-.home__scroll-button:hover{
-  transform: translateY(.25rem);
+.home__scroll-button:hover {
+  transform: translateY(0.25rem);
 }
 
-.home__scroll-mouse{
+.home__scroll-mouse {
   font-size: 2rem;
 }
-.home__scroll-name{
+.home__scroll-name {
   font-size: var(--small-font-size);
   color: var(--title-color);
   font-weight: var(--font-medium);
   margin-right: var(--mb-0-25);
 }
 
-.hone__scroll-arrow{
+.hone__scroll-arrow {
   font-size: 1.25rem;
 }
 /* partie du boutton home */
 
-.button{
+.button {
   display: inline-block;
-  background-color: var(--frist-color) ;
-  color: #FFF;
+  background-color: var(--frist-color);
+  color: #fff;
   padding: 1rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   font-weight: var(--font-medium);
-
 }
-.button:hover{
+.button:hover {
   background-color: var(--frist-color-alt);
 }
 
-.button__icon{
+.button__icon {
   font-size: 1.25rem;
   margin-left: var(--mb-0-5);
-  transition: .3s;
+  transition: 0.3s;
 }
 
-.button--flex{
+.button--flex {
   display: inline-block;
   align-items: center;
-
 }
 
-.button--small{
-  padding: .75rem 1rem;
-
+.button--small {
+  padding: 0.75rem 1rem;
 }
 
-.button--link{
- padding: 0;
- background-color: transparent;
- color: var(--frist-color);
-
+.button--link {
+  padding: 0;
+  background-color: transparent;
+  color: var(--frist-color);
 }
 
-.button--link:hover{
-  
+.button--link:hover {
   background-color: transparent;
   color: var(--frist-color-alt);
- 
- }
-
+}
 
 /* partie about  */
 
-
-
-.about__img{
+.about__img {
   width: 200px;
-  border-radius: .5rem;
-   margin: auto;
-   
+  border-radius: 0.5rem;
+  margin: auto;
 }
 
-.about__description{
+.about__description {
   text-align: center;
   margin-bottom: var(--mb-2-5);
 }
 
-.about__info{
+.about__info {
   display: flex;
   justify-content: space-evenly;
   margin-bottom: var(--mb-2-5);
 }
 
-.about__info-title{
- font-size: var(--h2-font-size);
- font-weight: var(--font-semi-bold);
- color: var(--title-color);
+.about__info-title {
+  font-size: var(--h2-font-size);
+  font-weight: var(--font-semi-bold);
+  color: var(--title-color);
 }
-.about__info-name{
+.about__info-name {
   font-size: var(--smaller-font-size);
 }
 
 .about__info-title,
-.about__info-name{
+.about__info-name {
   display: block;
   text-align: center;
 }
 
-.about__buttons{
+.about__buttons {
   display: flex;
   justify-content: center;
- 
 }
 
 /* partie skills */
 
-.skills__container{
-  row-gap:0 ;
+.skills__container {
+  row-gap: 0;
 }
 
-.skills__header{
+.skills__header {
   display: flex;
   align-items: center;
   margin-bottom: var(--mb-2-5);
@@ -409,167 +391,165 @@ img{
 }
 
 .skills__icon,
-.skills__arrow{
+.skills__arrow {
   font-size: 2rem;
   color: var(--frist-color);
 }
 
-.skills__icon{
+.skills__icon {
   margin-right: var(--mb-0-75);
 }
 
-.skills__title{
-   font-size: var(--h3-font-size);
+.skills__title {
+  font-size: var(--h3-font-size);
 }
 
-.skills__subtitle{
+.skills__subtitle {
   font-size: var(--small-font-size);
   color: var(--text-color-light);
 }
 
-.skills__arrow{
+.skills__arrow {
   margin-left: auto;
-  transition: .4s;
+  transition: 0.4s;
 }
 
-.skills__titles{
+.skills__titles {
   display: flex;
   justify-content: space-between;
   margin-bottom: var(--mb-0-5);
 }
 
-.skills__name{
+.skills__name {
   font-size: var(--normal-font-size);
-  font-weight: var(--font-medium)
+  font-weight: var(--font-medium);
 }
 
 .skills__bar,
-.skills__percentage{
+.skills__percentage {
   height: 5px;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
 }
-.skills__bar{
+.skills__bar {
   background-color: var(--frist-color-lighter);
 }
-.skills__percentage{
+.skills__percentage {
   display: block;
   background-color: var(--frist-color);
 }
-.skills__html{
+.skills__html {
   width: 90%;
 }
 
-.skills__css{
+.skills__css {
   width: 75%;
 }
 
-.skills__js{
+.skills__js {
   width: 75%;
 }
 
-.skills__react{
+.skills__react {
   width: 75%;
 }
-.skills__node{
+.skills__node {
   width: 63%;
 }
 
-.skills__mongo{
+.skills__mongo {
   width: 68%;
 }
 
-.skills__sql{
+.skills__sql {
   width: 68%;
 }
 
-.skills__firebase{
+.skills__firebase {
   width: 55%;
 }
 
-.skills__figma{
+.skills__figma {
   width: 65%;
 }
 
-.skills__sketch{
+.skills__sketch {
   width: 46%;
 }
 
-.skills__photoshop{
+.skills__photoshop {
   width: 70%;
 }
 
-.skills__close .skills__list{
+.skills__close .skills__list {
   height: 0;
   overflow: hidden;
 }
 
-.skills__open .skills__list{
+.skills__open .skills__list {
   height: max-content;
   margin-bottom: var(--mb-2-5);
 }
 
-.skills__open .skills__arrow{
+.skills__open .skills__arrow {
   transform: rotate(-180deg);
 }
 
 /* Qualification 🤔 */
 
-.qualification__tabs{
+.qualification__tabs {
   display: flex;
   justify-content: space-evenly;
   margin-bottom: var(--mb-2);
-
 }
 
-.qualification__button{
+.qualification__button {
   font-size: var(--h3-font-size);
   font-weight: var(--font-medium);
   cursor: pointer;
 }
 
-.qualification__button:hover{
-  color:  var(--frist-color);
+.qualification__button:hover {
+  color: var(--frist-color);
 }
 
-.qualification__icon{
+.qualification__icon {
   font-size: 1.8rem;
   margin-right: var(--mb-0-25);
-
 }
 
-.qualification__data{
+.qualification__data {
   display: grid;
   grid-template-columns: 1fr max-content 1fr;
   column-gap: 1.5rem;
 }
-.qualification__title{
+.qualification__title {
   font-size: var(--normal-font-size);
-  font-weight: var(--font-medium)
+  font-weight: var(--font-medium);
 }
 
-.qualification__subtitle{
+.qualification__subtitle {
   display: inline-block;
   font-size: var(--small-font-size);
   margin-bottom: var(--mb-1);
 }
-.qualification__calendar{
+.qualification__calendar {
   font-size: var(--smaller-font-size);
   color: var(--text-color-light);
 }
-.qualification__rounder{
-   display: inline-block;
-   width: 13px;
-   height: 13px;
-   background-color: var(--frist-color);
-   border-radius: 50%;
+.qualification__rounder {
+  display: inline-block;
+  width: 13px;
+  height: 13px;
+  background-color: var(--frist-color);
+  border-radius: 50%;
 }
- .qualification__line{
+.qualification__line {
   display: block;
   width: 1px;
   height: 100%;
   background-color: var(--frist-color);
   transform: translate(6px, -7px);
- }
+}
 
 /*  .qualification [data-content]{
   display: none;
@@ -580,82 +560,99 @@ bug mbola mila fixeko
   
  } */
 
- /* ===Services=== */
- .services__container{
+/* ===Services=== */
+.services__container {
   gap: 1.5rem;
-  grid-template-columns: repeat(2,1fr);
- }
- .services__content{
+  grid-template-columns: repeat(2, 1fr);
+}
+.services__content {
   position: relative;
   background-color: var(--container-color);
-  padding: 3.5rem .5rem 1.25rem 1.5rem;
-  border-radius: .25rem;
-  box-shadow: 0 2px 4px rgba(0,0,0,.15);
-  transition: .3s;
- }
+  padding: 3.5rem 0.5rem 1.25rem 1.5rem;
+  border-radius: 0.25rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+  transition: 0.3s;
+}
 
- .services__content:hover{
-  box-shadow: 0 4px 8px rgba(0,0,0,.20);
- }
+.services__content:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
 
- .services__icon{
+.services__icon {
   display: block;
   font-size: 1.5rem;
   color: var(--frist-color);
   margin-bottom: var(--mb-1);
- }
+}
 
- .services__title{
+.services__title {
   font-size: var(--h3-font-size);
   margin-bottom: var(--mb-1);
   font-weight: var(--font-medium);
- }
+}
 
- .services__button{
+.services__button {
   cursor: pointer;
   font-size: var(--small-font-size);
- }
+}
 
- .services__button:hover .button__icon{
-  transform: translateX(.25rem);
- }
+.services__button:hover .button__icon {
+  transform: translateX(0.25rem);
+}
 
- .services__modal{
+.services__modal {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0,0,0,.5);
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0 1rem;
   z-index: var(--z-modal);
-  /* opacity:0 */
-  /* visibility: hidden; */
-  transition: .3s;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+}
 
- }
-
- .services__modal-content{
+.services__modal-content {
   position: relative;
   background-color: var(--container-color);
   padding: 1.5rem;
-  border-radius: .5rem;
- }
+  border-radius: 0.5rem;
+}
 
- .services__modal-services{
+.services__modal-services {
   row-gap: 1rem;
- }
+}
 
- .services__modal-service{
-display: flex;
- }
+.services__modal-service {
+  display: flex;
+}
 
- .services__modal-title{
+.services__modal-title {
   font-size: var(--h3-font-size);
   font-weight: var(--font-medium);
   margin-bottom: var(--mb-1-5);
   cursor: pointer;
- }
+}
+.services__modal-icon {
+  color: var(--frist-color);
+  margin-right: var(--mb-0-25);
+}
+
+.services__modal-close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 1, 5rem;
+  color: var(--frist-color);
+  cursor: pointer;
+}
+
+.services__modal-icon {
+  color: var(--frist-color);
+  margin-right: var(--mb-0-25);
+}
