--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -612,6 +612,23 @@ bug mbola mila fixeko
   justify-content: center;
   padding: 0 1rem;
   z-index: var(--z-modal);
+  /* opacity: 0;
+  visibility: hidden; */
+  transition: 0.3s;
+}
+
+.services__modal_hidden {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1rem;
+  z-index: var(--z-modal);
   opacity: 0;
   visibility: hidden;
   transition: 0.3s;
