--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -673,3 +673,30 @@ bug mbola mila fixeko
   color: var(--frist-color);
   margin-right: var(--mb-0-25);
 }
+
+/* partie du portfolio lesy ben aa */
+.portfolio__container{
+  overflow: initial;
+}
+
+.portfolio__content{
+  padding: 0 1.5rem;
+}
+.portfolio__img{
+  width: 265px;
+  border-radius: .5rem;
+  justify-self: center;
+}
+
+.portfolio__title{
+  font-size: var(--h3-font-size);
+  margin-bottom: var(--mb-0-5);
+}
+.portfolio__description{
+  
+  margin-bottom: var(--mb-0-75);
+}
+
+.portfolio__button:hover .button__icon{
+  transform: translateX(.25rem);
+}
