--- a/portfolio-nextjs/src/styles/globals.css
+++ b/portfolio-nextjs/src/styles/globals.css
@@ -2,10 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-/*  configuration de base taillwind css   */
+
+*, html {
+
+  scroll-behavior: smooth !important;
+}
+
+/*  configuration de base any taillwind css   */
 @layer base {
   body {
      @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide
+  }
+
+  html {
+    @apply scroll-smooth;
   }
 
    h1,h2,h3,h4,h5,h6{
